# resume-cli

./: main.py  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
specs/001-build-a-local/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-a-local/contracts/agents/: bullet_composer.prompt.md  jobreq_extractor.prompt.md  validation_reviewer.prompt.md
specs/001-build-a-local/contracts/cli/: build.contract.md  doctor.contract.md  facts.contract.md  templates.contract.md
src/resumecli/cli/: build.py  doctor.py  facts.py  main.py  templates.py
src/resumecli/data/: composition.py  extraction.py  ingestion.py  rendering.py  retrieval.py  validation.py
src/resumecli/models/: bullet.py  coverage.py  embedding_cache.py  fact.py  job_posting.py  jobreq.py  run_log.py
src/resumecli/pipeline/: build_runner.py
src/resumecli/services/: embeddings.py  logging.py  storage.py
src/resumecli/templates/: default.typ
src/resumecli/templates/sample-data/job_postings/: sample_job.txt
tests/contract/: test_build_contract.py  test_bullet_composer_prompt.py  test_doctor_contract.py  test_facts_contract.py  test_jobreq_extractor_prompt.py  test_templates_contract.py  test_validation_reviewer_prompt.py
tests/integration/: test_cli_build_quickstart.py  test_cli_coverage_linking.py  test_cli_doctor_quickstart.py
tests/qa/: test_provenance_and_coverage.py
tests/unit/models/: test_coverage_tracking.py  test_fact_and_bullet.py  test_job_posting_jobreq.py
