[project]
name = "resume-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "typer>=0.12,<1.0",
    "pydantic>=2.8,<3.0",
    "fastembed>=0.2,<0.3",
    "outlines>=0.0.43,<0.1",
    "sqlite-utils>=3.37,<4.0",
    "typst>=0.11,<0.12",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.5,<0.6",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "mypy>=1.11,<2.0",
    "ruff>=0.5,<0.6",
]

[tool.uv.scripts]
lint = "ruff check src tests"
typecheck = "mypy src"
test = "pytest"
qa-provenance = "pytest tests/qa"
qa-coverage = "pytest tests/qa -k coverage"
contracts = "pytest tests/contract"
integration = "pytest tests/integration"

[tool.ruff]
target-version = "py313"
lint.select = ["E", "F", "I", "W"]
lint.ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
